--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,13 @@ bld/
 # typings
 typings/
 
+# Custom Angular2 TypeScript Compiler Output
+**/redFixGreenApp/**/*.js
+**/redFixGreenApp/**/*.js.map
+
+# App build dist
+**/wwwroot/build/
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
