--- a/src/RedFixGreen/package.json
+++ b/src/RedFixGreen/package.json
@@ -2,8 +2,12 @@
   "name": "red.fix.green",
   "version": "1.0.0",
   "scripts": {
+    "build": "SET NODE_ENV=development && npm run tsc && webpack -d --color",
+    "build:production": "SET NODE_ENV=production && npm run tsc && webpack -d --color",
+    "clean": "rimraf wwwroot/build/",
     "start": "tsc && concurrently \"npm run tsc:w\" ",
-    "postinstall": "typings install",
+    "postinstall": "typings install --ambient",
+    "test": "karma start karma.conf.js",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings"
@@ -19,19 +23,26 @@
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
-
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
-    "systemjs": "0.19.27",
     "zone.js": "^0.6.23",
-
     "angular2-in-memory-web-api": "0.0.20",
     "bootstrap": "^3.3.6"
   },
   "devDependencies": {
     "concurrently": "^2.2.0",
+    "jasmine": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "protractor": "^4.0.9",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.4",
+    "ts-loader": "^0.8.2",
     "typescript": "^2.0.2",
-    "typings":"^1.3.3"
+    "typings": "^1.3.3",
+    "webpack": "^2.1.0-beta.25"
   }
 }
