--- a/src/RedFixGreen/tsconfig.json
+++ b/src/RedFixGreen/tsconfig.json
@@ -17,7 +17,9 @@
     "wwwroot",
     "typings/index.d.ts",
     "typings/globals/node",
-    "typings/globals/jasmine"
+    "typings/globals/jasmine",
+    "typings/globals/angular-protractor",
+    "typings/globals/selenium-webdriver"
   ],
   "compileOnSave": false,
   "buildOnSave": false
